# nafad-pay-g2

./: .env.example  .gitignore  Makefile  README.md  api-contract.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-api.yml  deploy-frontend.yml
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  db.py  main.py  models.py  routes.py  schemas.py  simulator.py
api/tests/: conftest.py  test_endpoints.py  test_idempotency.py  test_pagination.py
data/: README.md
docs/: architecture-at-scale.md  architecture-early-stage.md  deployment-notes.md  idempotency-implementation.md  investigation-answers.md
eda/: analysis.ipynb  analysis.md  numbers-cheatsheet.md  requirements.txt
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.js  App.tsx  api.js  api.ts  types.js  types.ts
frontend/src/components/: BatchForm.js  BatchForm.tsx  CreateTxModal.tsx  Modal.tsx  StatsBanner.js  StatsBanner.tsx  Toast.js  Toast.tsx  TxDetailsModal.tsx  TxTable.js  TxTable.tsx
infrastructure/: README.md  cloudformation.yml
scripts/: bootstrap.sh
sql/: 01_init.sql  02_seed.sh
